data/all_generated_tests/raw_wast_tests/br_IncorrectConditionEvaluation_724.wast
;; 5. **Test Description:**    Create a test where `br_if` checks a condition immediately after a stack manipulation (e.g., `i32.add`). The condition should only be `true` if the result of the addition is zero.    - **Constraint Checked:** Proper condition evaluation following arithmetic operations.    - **Relation to Incorrect Condition Evaluation:** Ensures conditions dependent on operand stack operations are not mishandled.

(assert_invalid
  (module
    (func $test (param i32) (param i32) (result i32)
      (block (result i32)
        (local.get 0)
        (local.get 1)
        (i32.add)
        (br_if 0 (i32.const 0))
      )
    )
  )
  "unreachable code"
)